--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^7.0.5",
+    "mammoth": "^1.6.0",
     "pdf-parse": "^1.1.1",
     "xlsx": "^0.18.5"
   },
