--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "20"
   },
   "dependencies": {
+    "exceljs": "^4.4.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^7.0.5",
     "mammoth": "^1.6.0",
